@@ -3,7 +3,7 @@
 foo = [ 1, 2, 3 ]
 bar = [ 1.1, 2.2, 3.3 ]
 biz = [ "1", "2", "3" ]
-# bla = [ 1979-05-27T07:32:00Z, 1979-05-28T07:32:00Z ]
+bla = [ 1979-05-27T07:32:00Z, 1979-05-28T07:32:00Z ]
 
   [secA.subA]
   bar = 1
